more work to tidy things up and populate a user context service with a userinfo class

--- a/src/dotnet8.auth.common.server/dotnet8.auth.common.server.csproj
+++ b/src/dotnet8.auth.common.server/dotnet8.auth.common.server.csproj
@@ -9,7 +9,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\dotnet8.auth.shared\dotnet8.auth.shared.csproj" />
   </ItemGroup>
 
 </Project>
