--- a/src/dotnet8.auth.web/dotnet8.auth.web.csproj
+++ b/src/dotnet8.auth.web/dotnet8.auth.web.csproj
@@ -10,7 +10,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.4" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\dotnet8.auth.shared\dotnet8.auth.shared.csproj" />
   </ItemGroup>
 
 </Project>
